// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-compact-address renders 1`] = `
<sc-compact-address>
  <div class="sc-address">
    <sc-form-control class="sc-address__control" label="Country or region" part="control">
      <sc-select autocomplete="country-name" name="shipping_country" placeholder="Select Your Country" search=""></sc-select>
      <div class="sc-address__columns">
        <sc-select autocomplete="address-level1" hidden="" name="shipping_state" placeholder="Province/Region" search="" squared-top=""></sc-select>
        <sc-input autocomplete="postal-code" hidden="" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared-top=""></sc-input>
      </div>
    </sc-form-control>
  </div>
</sc-compact-address>
`;

exports[`sc-compact-address renders CA address fields 1`] = `
<sc-compact-address>
  <div class="sc-address">
    <sc-form-control class="sc-address__control" label="Country or region" part="control">
      <sc-select autocomplete="country-name" name="shipping_country" placeholder="Select Your Country" search="" squared-bottom="" value="CA"></sc-select>
      <div class="sc-address__columns">
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="Province/Region" search="" squared-top="" value="WI"></sc-select>
        <sc-input autocomplete="postal-code" hidden="" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared-left="" squared-top="" value="12345"></sc-input>
      </div>
    </sc-form-control>
  </div>
</sc-compact-address>
`;

exports[`sc-compact-address renders EU address fields 1`] = `
<sc-compact-address>
  <div class="sc-address">
    <sc-form-control class="sc-address__control" label="Country or region" part="control">
      <sc-select autocomplete="country-name" name="shipping_country" placeholder="Select Your Country" search="" value="UK"></sc-select>
      <div class="sc-address__columns">
        <sc-select autocomplete="address-level1" hidden="" name="shipping_state" placeholder="Province/Region" search="" squared-top="" value="WI"></sc-select>
        <sc-input autocomplete="postal-code" hidden="" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared-top="" value="12345"></sc-input>
      </div>
    </sc-form-control>
  </div>
</sc-compact-address>
`;

exports[`sc-compact-address renders US address fields 1`] = `
<sc-compact-address>
  <div class="sc-address">
    <sc-form-control class="sc-address__control" label="Country or region" part="control">
      <sc-select autocomplete="country-name" name="shipping_country" placeholder="Select Your Country" search="" squared-bottom="" value="US"></sc-select>
      <div class="sc-address__columns">
        <sc-select autocomplete="address-level1" name="shipping_state" placeholder="State" search="" squared-right="" squared-top="" value="WI"></sc-select>
        <sc-input autocomplete="postal-code" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared-left="" squared-top="" value="12345"></sc-input>
      </div>
    </sc-form-control>
  </div>
</sc-compact-address>
`;

exports[`sc-compact-address renders loading 1`] = `
<sc-compact-address loading="true">
  <div class="sc-address">
    <sc-form-control class="sc-address__control" label="Country or region" part="control">
      <sc-select autocomplete="country-name" name="shipping_country" placeholder="Select Your Country" search=""></sc-select>
      <div class="sc-address__columns">
        <sc-select autocomplete="address-level1" hidden="" name="shipping_state" placeholder="Province/Region" search="" squared-top=""></sc-select>
        <sc-input autocomplete="postal-code" hidden="" maxlength="5" name="shipping_postal_code" placeholder="Postal Code/Zip" squared-top=""></sc-input>
      </div>
    </sc-form-control>
    <sc-block-ui></sc-block-ui>
  </div>
</sc-compact-address>
`;
